--- a/src/main/resources/resources/FT.css
+++ b/src/main/resources/resources/FT.css
@@ -1,16 +1,16 @@
-td {
+td.feed {
   text-align: center;
   vertical-align: middle;
   border: 1px solid black;
   padding: 3px;
 }
 
-th {
+th.feed {
   border: 1px solid black;
   padding: 5px;
 }
 
-table {
+table.feed {
   border: 1px solid black;
   border-collapse: collapse;
   margin-left:auto;
