--- a/src/main/resources/resources/FT.css
+++ b/src/main/resources/resources/FT.css
@@ -1,16 +1,16 @@
-td.feed {
+td {
   text-align: center;
   vertical-align: middle;
   border: 1px solid black;
   padding: 3px;
 }
 
-th.feed {
+th {
   border: 1px solid black;
   padding: 5px;
 }
 
-table.feed {
+table {
   border: 1px solid black;
   border-collapse: collapse;
   margin-left:auto;
