updating forms to look better and changing the amounts calculation so that it also calculates hydration needs.

--- a/src/main/resources/resources/FT.css
+++ b/src/main/resources/resources/FT.css
@@ -48,3 +48,15 @@ ul.menu {
 ul.menu li {
   display: inherit;
 }
+
+label.aligned {
+  display: inline-block;
+  text-align: left;
+  width: 180px;
+}
+
+input {
+  margin-top:1px;
+  margin-bottom: 1px;
+  width:180px;
+}
